--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>     
     </div>
     <div class="container">
-        <h1>Vist counter</h1>
+        <h1>Visit counter</h1>
         <span id="visit-counter"></span>
     </div>
     <script src="script.js"></script>
